# yandex-project

./: .env.example  .gitignore  README.md  docker-compose.yml  specs.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  temp.py
backend/app/: config.py  dependencies.py  main.py  models.py  mqtt.py  schemas.py
backend/app/auth/: models.py  router.py  schemas.py  security.py  service.py
backend/app/core/: config.py
backend/app/database/: core.py
backend/app/devices/: models.py  mqtt_service.py  router.py  schemas.py  service.py
backend/app/iot/: models.py  router.py  schemas.py
backend/app/items/: models.py  router.py  schemas.py  service.py
backend/app/models/: user.py
backend/app/mqtt/: __init__.py  service.py
backend/examples/: mqtt_device_example.py
backend/sandbox/: main.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/api/: api.js  auth.js  devices.js  items.js  users.js
frontend/src/components/common/: Footer.js  Header.js
frontend/src/components/items/: CreateForm.js  ItemsDetails.js  ItemsTable.js
frontend/src/pages/: index.js
frontend/src/pages/auth/: YandexOAuthCallbackPage.js  login.js  profile.js  register.js
frontend/src/pages/items/: Create.js  Details.js  DeviceLogs.js  ItemsTablePage.js  Logs.js  Table.js
mosquitto/config/: mosquitto.conf  passwd
mosquitto/data/: mosquitto.db
